@@ -1,3 +1,7 @@
+require 'statemachine/state'
+require 'statemachine/super_state'
+require 'statemachine/transition'
+require 'statemachine/proc_calling'
 require 'statemachine/state_machine'
 require 'statemachine/builder'
 require 'statemachine/version'
