@@ -1,8 +1,8 @@
 module StateMachine
   module VERSION
     unless defined? MAJOR
-      MAJOR  = 1
-      MINOR  = 0
+      MAJOR  = 0
+      MINOR  = 1
       TINY   = 0
 
       STRING = [MAJOR, MINOR, TINY].join('.')
